--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <div class="actions">
         <button class="action-btn" onclick="restartGame()">🔁 Restart</button>
         <button class="action-btn" onclick="quitGame()">🚪 Quit</button>
-        <button class="action-btn" href="index2.html">version change</button>
+        <a class="action-btn" href="index2.html">Version Change</a>
       </div>
     </div>
     <div class="ladder" id="ladder-panel">
